@@ -1,0 +1,16 @@
+# Testing the interface to maxima.
+#
+@reset.
+obj1:= trigsimp( sin(x)**2 + cos(x)**2 );
+@maxima(%);
+tst1:= 1 - @(obj1);
+@collect_terms!(%);
+@assert(tst1);
+
+@reset.
+obj2:= integrate( sin(x)**2, x );
+@maxima(%);
+tst2:= (1/2 * x - 1/4 * sin(2 * x)) - @(obj2);
+@sumflatten!(%);
+@collect_terms!(%);
+@assert(tst2);
